ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample_Tape_Code__c/Lab_Sample_Tape_Code__c.object-meta.xml
<CustomObject>
    <description>This allows users to associate the tape codes with the lab samples</description>
    <label>Sample Description</label>
    <nameField>
        <displayFormat>LSTC - {000000000}</displayFormat>
        <label>Lab Sample Tape Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Descriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>