ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample_Tape_Code__c/fields/Case_Closed__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed__c</fullName>
    <description>Flag when the Lab Sample Tape Code is associated with Closed Case.</description>
    <formula>TEXT(Lab_Sample__r.Case__r.Claim_Stage__c) == &apos;Closed&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Closed?</label>
    <type>Checkbox</type>
</CustomField>