ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample_Tape_Code__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <description>Updates based on the Feedback Field on associated Lab Sample Parent - CLAIMSV2-64</description>
    <formula>Lab_Sample__r.Feedback__c</formula>
    <label>Feedback</label>
    <type>Checkbox</type>
</CustomField>