ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample_Tape_Code__c/fields/Lab_Sample__c.field-meta.xml
<CustomField>
    <fullName>Lab_Sample__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the lab sample the record is related to</description>
    <label>Lab Sample</label>
    <referenceTo>Lab_Sample__c</referenceTo>
    <relationshipName>Lab_Sample_Tape_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>