ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample_Tape_Code__c/fields/Manufacture_Date__c.field-meta.xml
<CustomField>
    <fullName>Manufacture_Date__c</fullName>
    <formula>TEXT( Tape_Code__r.Manufacture_Date__c)</formula>
    <label>Manufacture Date</label>
    <type>Text</type>
</CustomField>