ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample_Tape_Code__c/fields/Manufacturing_Info__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Info__c</fullName>
    <description>Combination of Manufacturing date and producing plant of the Tape Code associated with the Sample Description. - for User Story CLAIMSV2-96</description>
    <formula>Manufacture_Date__c &amp; &quot; - &quot; &amp;  Producing_Plant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Combination of Manufacturing date and producing plant of the Tape Code associated with the Sample Description.</inlineHelpText>
    <label>Manufacturing Info</label>
    <type>Text</type>
</CustomField>