ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample_Tape_Code__c/fields/Producing_Plant__c.field-meta.xml
<CustomField>
    <fullName>Producing_Plant__c</fullName>
    <formula>TEXT(  Tape_Code__r.Plant__c )</formula>
    <label>Producing Plant</label>
    <type>Text</type>
</CustomField>