ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample_Tape_Code__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Tape_Code__r.Product__r.Id,  Tape_Code__r.Product__r.Name  )</formula>
    <label>Product</label>
    <type>Text</type>
</CustomField>