ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample_Tape_Code__c/fields/Product_Colour__c.field-meta.xml
<CustomField>
    <fullName>Product_Colour__c</fullName>
    <formula>Tape_Code__r.Product__r.Colour__c</formula>
    <label>Product Colour</label>
    <type>Text</type>
</CustomField>