ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample_Tape_Code__c/fields/Product_Info__c.field-meta.xml
<CustomField>
    <fullName>Product_Info__c</fullName>
    <description>Combination of Product Name and Product Colour of the Tape Code associated with the Sample Description. - User story CLAIMSV2-96</description>
    <formula>Product__c  &amp; &quot; - &quot; &amp; Product_Colour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Combination of Product Name and Product Colour of the Tape Code associated with the Sample Description.</inlineHelpText>
    <label>Product Info</label>
    <type>Text</type>
</CustomField>