ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample_Tape_Code__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>This denotes the number of shingles included in the sample for the associated tape code</description>
    <label>Quantity</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>