ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample_Tape_Code__c/fields/Tape_Code__c.field-meta.xml
<CustomField>
    <fullName>Tape_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the tape code that is associated with the lab sample</description>
    <label>Tape Code</label>
    <referenceTo>Tape_Code__c</referenceTo>
    <relationshipName>Lab_Sample_Tape_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>