ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample_Tape_Code__c/fields/Tape_Code_Less_Than_a_Year_Old__c.field-meta.xml
<CustomField>
    <fullName>Tape_Code_Less_Than_a_Year_Old__c</fullName>
    <description>True if the Lab Sample tape code is less than a year old.</description>
    <formula>IF( ADDMONTHS(Tape_Code__r.Manufacture_Date__c, 12) &gt; CreatedDate, true, false)</formula>
    <inlineHelpText>Is the lab sample tape code less than a year old?</inlineHelpText>
    <label>Tape Code Less Than a Year Old?</label>
    <type>Checkbox</type>
</CustomField>