ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample_Tape_Code__c/fields/Tape_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Tape_Code_Name__c</fullName>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-394
Capture the name of the Tape Code. Used mainly to capture dupe Sample Records.
The field is used in the Sample Description Matching Rule.</description>
    <inlineHelpText>Name of the Tape Code associated with Sample Description</inlineHelpText>
    <label>Tape Code Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>