ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample_Tape_Code__c/fields/Tape_Code_Qty__c.field-meta.xml
<CustomField>
    <fullName>Tape_Code_Qty__c</fullName>
    <description>Quantity Field of the Tape Code associated with the Sample Description.  User Story ClaimsV2-985</description>
    <formula>HYPERLINK(&quot;/&quot;&amp; Tape_Code__r.Id, Tape_Code__r.Name ) &amp; &quot; - &quot; &amp; Text(Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantity Field of the Tape Code associated with the Sample Description.</inlineHelpText>
    <label>Tape Code/Qty</label>
    <type>Text</type>
</CustomField>