ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample_Tape_Code__c/validationRules/DoNotUpdateIfLabSampleIsApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotUpdateIfLabSampleIsApproved</fullName>
    <active>true</active>
    <description>If the Lab Sample is approved (Status = Approved), block updates</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
OR(TEXT(Lab_Sample__r.Status__c) == &apos;Approved&apos;, TEXT(Lab_Sample__r.Status__c) == &apos;In Approval&apos;)
)</errorConditionFormula>
    <errorMessage>You cannot create or modify Sample Descriptions once the Lab Sample has been submitted for approval or is approved.</errorMessage>
</ValidationRule>